--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
-        "react/http": "^1.5"
+        "react/http": "^1.5",
+        "sunra/php-simple-html-dom-parser": "^1.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
