--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "googleads/google-ads-php": "^12.1",
         "guzzlehttp/guzzle": "^7.0.1",
+        "jovix/dataforseo-clientv3": "^1.1",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
